--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>cn.ecnu.trace.MainApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
