[需求] 用户登录注册

--- a/system/src/main/resources/application.yml
+++ b/system/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 server:
   port: 8088
 spring:
-  application:
-    name: user
   main:
     allow-bean-definition-overriding: true
   datasource:
@@ -10,3 +8,5 @@ spring:
     url: jdbc:mysql://oeong.com:3306/farm_produce?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: farm_produce
     password: jLJ2sCGkyYKYzKnd
+    hikari:
+      max-lifetime: 120000
