微服务搭建+网关鉴权和限流+登录和注册优化（JWT) + Mybatis-Plus分页bug修复

--- a/code-generate/src/main/resources/application.properties
+++ b/code-generate/src/main/resources/application.properties
@@ -1,27 +1,27 @@
 #pojo\u5305\u8DEF\u5F84
-pojoPackage=cn.ecnu.trace.pojo
+pojoPackage=cn.ecnu.system.pojo
 #Dao\u5305\u8DEF\u5F84
-mapperPackage=cn.ecnu.trace.mapper
+mapperPackage=cn.ecnu.system.mapper
 #xml path
-mapperXmlPackage=cn.ecnu.trace.xml
+mapperXmlPackage=cn.ecnu.system.xml
 #service\u63A5\u53E3\u5305\u8DEF\u5F84
-serviceInterfacePackage=cn.ecnu.trace.service
+serviceInterfacePackage=cn.ecnu.system.service
 #service\u63A5\u53E3\u5B9E\u73B0\u7C7B\u5305\u8DEF\u5F84
-serviceInterfaceImplPackage=cn.ecnu.trace.service.impl
+serviceInterfaceImplPackage=cn.ecnu.system.service.impl
 #rpc\u63A5\u53E3\u5305\u8DEF\u5F84
-rpcInterfacePackage=cn.ecnu.trace.rpc
+rpcInterfacePackage=cn.ecnu.system.rpc
 #rpc\u63A5\u53E3\u5B9E\u73B0\u7C7B\u5305\u8DEF\u5F84
-rpcInterfaceImplPackage=cn.ecnu.trace.rpc.impl
+rpcInterfaceImplPackage=cn.ecnu.system.rpc.impl
 #controller\u5305\u8DEF\u5F84
-controllerPackage=cn.ecnu.trace.controller
+controllerPackage=cn.ecnu.system.controller
 #feign\u5305\u8DEF\u5F84
-feignPackage=cn.ecnu.trace.feign
+feignPackage=cn.ecnu.system.feign
 #\u662F\u5426\u542F\u7528swagger
 enableSwagger=true
 #swagger-ui\u7684\u8DEF\u5F84
-swaggeruipath=cn.ecnu.trace.swagger
+swaggeruipath=cn.ecnu.system.swagger
 #\u670D\u52A1\u540D\u5B57,\u7528\u4E8E\u751F\u6210feign 微服务名称
-serviceName=trace
+serviceName=system
 
 #author of the codes
 code.author=Ecnu
@@ -30,7 +30,7 @@ code.author=Ecnu
 tableLogic=deleted
 
 #\u6570\u636E\u6E90\u914D\u7F6E192.168.211.132
-url=jdbc:mysql://oeong.com:3306/farm_produce?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+url=jdbc:mysql://150.158.212.175:3306/farm_produce?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 uname=farm_produce
 pwd=jLJ2sCGkyYKYzKnd
 driver=com.mysql.cj.jdbc.Driver
