环境变量+大棚管理

--- a/code-generate/src/main/resources/application.properties
+++ b/code-generate/src/main/resources/application.properties
@@ -30,7 +30,7 @@ code.author=Ecnu
 tableLogic=deleted
 
 #\u6570\u636E\u6E90\u914D\u7F6E192.168.211.132
-url=jdbc:mysql://150.158.212.175:3306/farm_produce?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-uname=farm_produce
-pwd=jLJ2sCGkyYKYzKnd
+url=jdbc:mysql://139.224.164.169:3306/traceap?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+uname=tracer
+pwd=Aa111111
 driver=com.mysql.cj.jdbc.Driver
