--- a/system/src/main/resources/application.yml
+++ b/system/src/main/resources/application.yml
@@ -7,9 +7,10 @@ spring:
     allow-bean-definition-overriding: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://150.158.212.175:3306/farm_produce?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: farm_produce
-    password: jLJ2sCGkyYKYzKnd
+    #navicat连接，记不住ip可以直接用域名，项目里面直接用ip加快访问
+    url: jdbc:mysql://139.224.164.169/traceap?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: tracer
+    password: Aa111111
     hikari:
       max-lifetime: 120000
   jackson:
