--- a/code-generate/pom.xml
+++ b/code-generate/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.ecnu.traceap</groupId>
+    <groupId>cn.ecnu.systemap</groupId>
     <artifactId>code-generate</artifactId>
     <version>1.0-SNAPSHOT</version>
     <description>代码生成器</description>
 
     <parent>
         <artifactId>FarmProduce</artifactId>
-        <groupId>cn.ecnu.trace</groupId>
+        <groupId>cn.ecnu.system</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
