--- a/gataway/pom.xml
+++ b/gataway/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>FarmProduce</artifactId>
-        <groupId>cn.ecnu.trace</groupId>
+        <groupId>cn.ecnu.system</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -20,7 +20,7 @@
     <dependencies>
         <!--查询数据库数据-->
         <dependency>
-            <groupId>cn.ecnu.trace</groupId>
+            <groupId>cn.ecnu.system</groupId>
             <artifactId>common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <exclusions>
