--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.2.6.RELEASE</version>
     </parent>
-    <groupId>cn.ecnu.trace</groupId>
+    <groupId>cn.ecnu.system</groupId>
     <artifactId>FarmProduce</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>FarmProduce</name>
