--- a/gataway/src/main/resources/application.yml
+++ b/gataway/src/main/resources/application.yml
@@ -44,7 +44,7 @@ spring:
         - id: web
           uri: lb://web
           predicates:
-            - Path=/assets/src/**
+            - Path=/assets/**
 #            - name: RequestRateLimiter #一秒10次请求
 #              args:
 #                key-resolver: "#{@ipKeyResolver}"
